<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin10"
            android:clipToPadding="false"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSizeMed"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin50"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorWhite" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:background="@color/colorBlue"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSizeSmall" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:background="@color/colorDarkBlue"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>